chart title spacing fix

--- a/First draft SOAReligion/css/styles2.css
+++ b/First draft SOAReligion/css/styles2.css
@@ -297,6 +297,10 @@ a:hover {
     margin-right: 1rem;
 }
 
+.margin-left {
+    margin-left: 8rem;
+}
+
 .padding-bottom {
     padding-bottom: 2rem;
 }
@@ -1323,7 +1327,10 @@ a:hover {
 
     }
 
-
+    
+    .margin-left {
+        margin-left: 0rem;
+    }
 
     .padding-text-small-bottom {
         padding-left: 3rem;
